--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 * {
     margin: 0;
     padding: 0;
@@ -31,12 +28,13 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 15px;
 }
 
 nav .logo h1 {
     font-size: 24px;
 }
+
 .logo h1:hover {
     cursor: pointer;
     transition: 0.1s;
@@ -83,12 +81,14 @@ nav .logo h1 {
     text-align: center;
     flex-direction: column;
 }
+
 .hero-content h2:hover {
     cursor: pointer;
     transition: 0.1s;
     transform: scale(1.1);
-    
-} 
+
+}
+
 .hero h2 {
     font-size: 50px;
     margin-bottom: 20px;
@@ -155,6 +155,7 @@ nav .logo h1 {
 .services {
     padding: 40px 20px;
     text-align: center;
+    display: block;
 }
 
 .services h2 {
@@ -164,13 +165,16 @@ nav .logo h1 {
 
 .service-card {
     display: inline-block;
-    width: 30%;
+    width: 25%;
     margin: 20px;
     background: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     text-align: left;
+
+
+
 }
 
 .service-card h3 {
@@ -181,6 +185,58 @@ nav .logo h1 {
 .service-card p {
     font-size: 16px;
 }
+
+/*   SERVICE CARD 01  */
+
+
+
+.service-card1 {
+    display: inline-block;
+    width: 30%;
+    margin: 20px;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: left;
+}
+
+.service-card1 h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.service-card1 p {
+    font-size: 16px;
+}
+
+
+
+
+/*  SERVICE CARD 02 */
+
+
+.service-card2 {
+    display: inline-block;
+    width: 25%;
+    margin: 20px;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: left;
+
+}
+
+.service-card2 h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.service-card2 p {
+    font-size: 16px;
+}
+
 
 
 
@@ -252,4 +308,233 @@ footer {
 
 footer p {
     font-size: 16px;
+}
+
+
+
+
+/* MEDIA QUREY */
+
+
+
+@media(max-width:430px) {
+    .hero {
+        height: 360px;
+
+        background: #00B4DB;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #0083B0, #00B4DB);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 20px;
+        width: auto;
+    }
+
+
+
+
+    .logo h1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .nav-links {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+
+    }
+
+    .nav-links li {
+        margin-left: 0px;
+    }
+
+    /* .nav-links li:hover {
+        background-color: rgba(255, 0, 0, 0.74);
+        transition:  all 0.3s ease;
+        transform:  scale(1.1);
+    } */
+    .hero-content h2 {
+        width: 100%;
+        height: 100px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 10px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        margin-top: 0px;
+        background: #00B4DB;
+
+    }
+
+    .hero-content p {
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 10px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        margin-top: 0px;
+        margin-bottom: 90px;
+        /* background: #00B4DB; */
+
+    }
+
+    .hero-content a {
+        /*  pending code  */
+    }
+
+
+    .hero h2 {
+        font-size: 25px;
+        /* padding-bottom: 10px; */
+    }
+
+    .hero p {
+        font-size: 15px;
+        padding-bottom: 0px;
+    }
+
+    .hero .btn {
+        font-size: 12px;
+        margin-bottom: 300px
+    }
+
+    .hero .btn:hover {
+        cursor: pointer;
+        color: black;
+        background: #00B4DB;
+        background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+        background: linear-gradient(to right, #0083B0, #00B4DB);
+        transition: 0.1s;
+        transform: scale(1.1);
+    }
+
+
+    .about h2 {
+        font-size: 20px;
+    }
+
+    .about p {
+        font-size: 16px;
+    }
+
+    .service {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: start;
+        flex-wrap: nowrap;
+
+
+    }
+
+    .service-card {
+        width: 300px;
+        text-align: center;
+        background-color: #33333317;
+
+    }
+
+    .service-card:hover {
+        cursor: pointer;
+        color: white;
+        background: #00B4DB;
+        background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+        background: linear-gradient(to right, #0083B0, #00B4DB);
+        transition: 0.1s;
+        transform: scale(1.1);
+    }
+
+    .service-card h3 {
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .service-card p {
+        font-size: 15px;
+    }
+
+
+    .service-card1 {
+        width: 300px;
+        text-align: center;
+        background-color: #33333317;
+
+
+    }
+
+    .service-card1:hover {
+        cursor: pointer;
+        color: white;
+        background: #00B4DB;
+        background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+        background: linear-gradient(to right, #0083B0, #00B4DB);
+        transition: 0.1s;
+        transform: scale(1.1);
+    }
+
+
+    .service-card1 h3 {
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .service-card1 p {
+        font-size: 15px;
+    }
+
+    .service-card2 {
+        width: 300px;
+        text-align: center;
+        background-color: #33333317;
+
+    }
+
+    .service-card2:hover {
+        cursor: pointer;
+        color: white;
+        background: #00B4DB;
+        background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+        background: linear-gradient(to right, #0083B0, #00B4DB);
+        transition: 0.3s;
+        transform: scale(1.1);
+    }
+
+
+    .service-card2 h3 {
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .service-card2 p {
+        font-size: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+
+
+
+
 }
